# Zephyr-Secure-Sensor-Node

./: CMakeLists.txt  Kconfig  README.md  ble_recieve.py  prj.conf
boards/: esp32s3_devkitc_esp32s3_procpu.overlay
conf/: ble.conf  power.conf  security.conf  wifi_mqtt.conf
include/: app_config.h  ble_service.h  mqtt_client.h  power_manager.h  sensor_manager.h
scripts/: ble_recieve.py  build.sh  flash.sh
src/: ble_service.c  main.c  mqtt_client.c  power_manager.c  sensor_manager.c
subsys/encoding/: CMakeLists.txt  json_encoder.c
subsys/sensors/: CMakeLists.txt  adc_battery.c  i2c_temp_sensor.c  spi_accel_sensor.c
